# agentlib

./: .gitignore  README.md  pyproject.toml  repl-benchmark
docs/: LLM-GUIDE-MIXINS.md  LLM-GUIDE-REPLAGENT.md  LLM-GUIDE.md  LLM_GUIDE.md  agentlib.md  guide.md  mixins.md  python_tools.md  replagent.md  sandbox.md
examples/: cli_assistant.py  code_agent.py  config.py  register_provider.py  todo_agent.py
src/agentlib/: README.md  __init__.py  agent.py  apply_patch.py  attachment_mixin.py  client.py  code_agent_coalesce.py  code_agent_condense.py  code_agent_preprocess.py  config.py  conversation.py  core.py  dotenv.py  jina_mixin.py  llm_registry.py  mcp.py  mcp_agent.py  mcp_mixin.py  messages.py  patch_agent.py  patch_mixin.py  preprocess.py  preview_refs.py  python_tool_mixin.py  repl_agent.py  repl_attachment_mixin.py  repl_events.py  repl_mixin.py  session_replay.py  session_store.py  shell_agent.py  shell_mixin.py  streaming.py  subagent.py  subrepl.py  tavily_mixin.py  tool_mixin.py  utils.py
src/agentlib/agents/: __init__.py  code_agent.py
src/agentlib/cli/: __init__.py  alt_history.py  altmode.py  (+9 more)
tests/: test_agent_tools.py  test_client.py  test_code_agent_benchmark.py  test_code_agent_coalesce.py  test_code_agent_condense.py  test_code_agent_preview_attachments.py  test_conversation.py  test_cursor_restore.py  test_display_replay.py  test_dotenv.py  test_imports.py  test_preprocess.py  test_repl_benchmark.py  test_repl_events.py  test_resume_replay.py  test_rewind.py  test_session_store.py  test_streaming.py  test_subagent.py  test_subagent_response.py
(+23 files in other folders)
